buffer and available time fix

--- a/plugin-styles.css
+++ b/plugin-styles.css
@@ -1,10 +1,10 @@
 option:disabled {
-    color: red;
+  color: red;
 }
-span#times {
-    color: red;
-    font-weight: 600;
+#times {
+  color: red;
+  font-weight: 600;
 }
 p.woocommerce-shipping-destination {
-    display: none;
+  display: none;
 }
